--- a/hextechhunt-client/index.html
+++ b/hextechhunt-client/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
 
+    <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Audiowide'>
+    <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto:300'>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+
     <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
     <script type="text/javascript" src="node_modules/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
@@ -10,10 +15,14 @@
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/controllers/SearchController.js"></script>
     <script type="text/javascript" src="js/controllers/ResultsController.js"></script>
-    <script type="text/javascript" src="js/services/RiotApiService.js"></script>
   </head>
   <body>
-    <h1>HextechHunt</h1>
+    <h1 class="header-text">HextechHunt</h1>
     <div id="container" data-ng-view=""></div>
+    <footer>HextechHunt isn’t endorsed by Riot Games and doesn’t reflect the views or opinions of Riot Games or anyone officially involved in producing or
+      managing League of Legends.
+      <br />
+      League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.
+    </footer>
   </body>
 </html>
