Initial commit for HextechHuntService and added more styling

--- a/hextechhunt-client/index.html
+++ b/hextechhunt-client/index.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/controllers/SearchController.js"></script>
     <script type="text/javascript" src="js/controllers/ResultsController.js"></script>
+    <script type="text/javascript" src="js/services/HextechHuntService.js"></script>
   </head>
   <body>
     <h1 class="header-text">HextechHunt</h1>
