Fixed API promise bug, started setting up for results view, and added navigation icons

--- a/hextechhunt-client/index.html
+++ b/hextechhunt-client/index.html
@@ -18,9 +18,18 @@
     <script type="text/javascript" src="js/services/HextechHuntService.js"></script>
   </head>
   <body>
-    <h1 class="header-text">HextechHunt</h1>
+    <header>
+      <div class="header-icons">
+        <a href="#/search"><img src="images/home.png" height="40" width="40" /></a>
+        <a href="#/about"><img src="images/information-circled.png" height="40" width="40" /></a>
+        <a href="https://github.com/abaran30/hextechhunt"><img src="images/social-github.png" height="40" width="40" /></a>
+      </div>
+    </header>
+    <div class="centered">
+      <h1 class="header-text">HextechHunt</h1>
+    </div>
     <div id="container" data-ng-view=""></div>
-    <footer>HextechHunt isn’t endorsed by Riot Games and doesn’t reflect the views or opinions of Riot Games or anyone officially involved in producing or
+    <footer class="centered">HextechHunt isn’t endorsed by Riot Games and doesn’t reflect the views or opinions of Riot Games or anyone officially involved in producing or
       managing League of Legends.
       <br />
       League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.
