--- a/hextechhunt-client/index.html
+++ b/hextechhunt-client/index.html
@@ -1,37 +1,48 @@
 <!DOCTYPE html>
 <html data-ng-app="hextechhuntClientApp">
   <head>
-    <meta charset="utf-8" />
+    <title>HextechHunt</title>
+    <meta charset="utf-8">
 
+    <!-- Styling and fonts -->
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Audiowide'>
     <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Roboto:300'>
     <link rel="stylesheet" type="text/css" href="css/main.css">
 
+    <!-- External Node modules -->
     <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
     <script type="text/javascript" src="node_modules/angular-route/angular-route.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 
+    <!-- JavaScript -->
     <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/controllers/SearchController.js"></script>
     <script type="text/javascript" src="js/controllers/ResultsController.js"></script>
     <script type="text/javascript" src="js/services/HextechHuntService.js"></script>
   </head>
   <body>
+    <!-- Header bar with icons that link to the Home (Search) view, the About view, and the GitHub repository for this application -->
     <header>
-      <div class="header-icons">
-        <a href="#/search"><img src="images/home.png" height="40" width="40" /></a>
-        <a href="#/about"><img src="images/information-circled.png" height="40" width="40" /></a>
-        <a href="https://github.com/abaran30/hextechhunt"><img src="images/social-github.png" height="40" width="40" /></a>
+      <div class="header-bar">
+        <a href="#/search"><img src="images/home.png" height="40" width="40" alt="Home"></a>
+        <a href="#/about"><img src="images/information-circled.png" height="40" width="40" alt="About"></a>
+        <a href="https://github.com/abaran30/hextechhunt"><img src="images/social-github.png" height="40" width="40" alt="GitHub"></a>
       </div>
     </header>
+
+    <!-- HextechHunt logo -->
     <div class="centered">
-      <h1 class="header-text">HextechHunt</h1>
+      <h1 class="app-logo">HextechHunt</h1>
     </div>
-    <div id="container" data-ng-view=""></div>
-    <footer class="centered">HextechHunt isn’t endorsed by Riot Games and doesn’t reflect the views or opinions of Riot Games or anyone officially involved in producing or
-      managing League of Legends.
-      <br />
+
+    <!-- AngularJS ngView -->
+    <div id="view-container" data-ng-view=""></div>
+
+    <!-- Footer with endorsement/reflection disclaimer -->
+    <footer class="centered">HextechHunt isn’t endorsed by Riot Games and doesn’t reflect the views or opinions of Riot Games or anyone officially involved in
+      producing or managing League of Legends.
+      <br>
       League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.
     </footer>
   </body>
