Added search capability for results, added About view, and made some progress with the README and docs

--- a/hextechhunt-client/index.html
+++ b/hextechhunt-client/index.html
@@ -4,6 +4,8 @@
     <title>HextechHunt</title>
     <meta charset="utf-8">
 
+    <link rel="icon" href="images/favicon.png">
+
     <!-- Styling and fonts -->
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Audiowide'>
@@ -46,10 +48,10 @@
     <div id="view-container" data-ng-view=""></div>
 
     <!-- Footer with endorsement/reflection disclaimer -->
-    <footer class="centered">HextechHunt isn’t endorsed by Riot Games and doesn’t reflect the views or opinions of Riot Games or anyone officially involved in
-      producing or managing League of Legends.
+    <footer class="centered"><em>HextechHunt</em> isn’t endorsed by Riot Games and doesn’t reflect the views or opinions of Riot Games or anyone officially involved in
+      producing or managing <em>League of Legends</em>.
       <br>
-      League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.
+      <em>League of Legends</em> and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.
     </footer>
   </body>
 </html>
