Made small change in overview diagram, fixed README up a bit, and cleaned up the HTML and CSS and added comments

--- a/hextechhunt-client/index.html
+++ b/hextechhunt-client/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html data-ng-app="hextechhuntClientApp">
   <head>
-    <title>HextechHunt</title>
     <meta charset="utf-8">
-
     <link rel="icon" href="images/favicon.png">
+    <title>HextechHunt</title>
 
     <!-- Styling and fonts -->
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -41,15 +40,15 @@
       <h1 class="app-logo">HextechHunt</h1>
     </div>
 
-    <!-- Heartcode Canvas Loader -->
+    <!-- Heartcode CanvasLoader -->
     <div id="canvasloader-container" class="canvas-loader-wrapper"></div>
 
     <!-- AngularJS ngView -->
     <div id="view-container" data-ng-view=""></div>
 
-    <!-- Footer with endorsement/reflection disclaimer -->
-    <footer class="centered"><em>HextechHunt</em> isn’t endorsed by Riot Games and doesn’t reflect the views or opinions of Riot Games or anyone officially involved in
-      producing or managing <em>League of Legends</em>.
+    <!-- Footer with disclaimer -->
+    <footer class="centered"><em>HextechHunt</em> isn’t endorsed by Riot Games and doesn’t reflect the views or opinions of Riot Games or anyone officially
+      involved in producing or managing <em>League of Legends</em>.
       <br>
       <em>League of Legends</em> and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.
     </footer>
