Added ProxyHostResolver and cleaned-up some code

--- a/hextechhunt-client/index.html
+++ b/hextechhunt-client/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="js/controllers/SearchController.js"></script>
     <script type="text/javascript" src="js/services/CanvasLoaderService.js"></script>
     <script type="text/javascript" src="js/services/HextechHuntService.js"></script>
+    <script type="text/javascript" src="js/services/ProxyHostResolverService.js"></script>
   </head>
   <body>
     <!-- Header bar with icons that link to the Home (Search) view, the About view, and the GitHub repository for this application -->
