Minor syntax adjustments and adjusted README

--- a/hextechhunt-client/index.html
+++ b/hextechhunt-client/index.html
@@ -48,10 +48,10 @@
     <div id="view-container" data-ng-view=""></div>
 
     <!-- Footer with disclaimer -->
-    <footer class="centered"><em>HextechHunt</em> isn’t endorsed by Riot Games and doesn’t reflect the views or opinions of Riot Games or anyone officially
-      involved in producing or managing <em>League of Legends</em>.
+    <footer class="centered">HextechHunt isn’t endorsed by Riot Games and doesn’t reflect the views or opinions of Riot Games or anyone officially
+      involved in producing or managing League of Legends.
       <br>
-      <em>League of Legends</em> and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.
+      League of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League of Legends © Riot Games, Inc.
     </footer>
   </body>
 </html>
